force-app/main/default/objects/Campaign/fields/Programme_URL__c.field-meta.xml
<CustomField>
    <fullName>Programme_URL__c</fullName>
    <label>Programme URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>