force-app/main/default/objects/Campaign/fields/Proof_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Proof_Email_Sent__c</fullName>
    <label>Proof Email Sent</label>
    <type>DateTime</type>
</CustomField>