force-app/main/default/objects/Campaign/fields/Research_Partner__c.field-meta.xml
<CustomField>
    <fullName>Research_Partner__c</fullName>
    <label>Research Partner</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Market Research</fullName>
            </value>
            <value>
                <fullName>Genex Insights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>