force-app/main/default/objects/Campaign/fields/RSVP__c.field-meta.xml
<CustomField>
    <fullName>RSVP__c</fullName>
    <label>RSVP</label>
    <type>Date</type>
</CustomField>