force-app/main/default/objects/Campaign/fields/Save_The_Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Save_The_Date_Sent__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The date the save the date is sent</description>
    <label>Save The Date Sent</label>
    <type>Date</type>
</CustomField>