force-app/main/default/objects/Campaign/fields/Target_Client_Contact_Category__c.field-meta.xml
<CustomField>
    <fullName>Target_Client_Contact_Category__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The target level of clients contacts for the campaign based on the organisational hierarchy designation</description>
    <inlineHelpText>Senior Executive = the most senior employees in an organisation;
            Senior Manager = less senior employees in an organisation;
            Manager = general managerial employees in an organisation;
            Staff = general employees in an organisation</inlineHelpText>
    <label>Target Client Contact Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Senior Executive</fullName>
            </value>
            <value>
                <fullName>Senior Manager</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>