force-app/main/default/objects/Campaign/fields/Target_Client_Sector__c.field-meta.xml
<CustomField>
    <fullName>Target_Client_Sector__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            Standard Bank Client Sectors</description>
    <label>Target Client Sector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agri Business</fullName>
            </value>
            <value>
                <fullName>Asset Managers</fullName>
            </value>
            <value>
                <fullName>Automotives</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Central Banks</fullName>
            </value>
            <value>
                <fullName>Development Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Diversified Industries</fullName>
            </value>
            <value>
                <fullName>EB &amp; SI</fullName>
            </value>
            <value>
                <fullName>Family Conglomerates</fullName>
            </value>
            <value>
                <fullName>Insurance Companies</fullName>
            </value>
            <value>
                <fullName>International Organisations</fullName>
            </value>
            <value>
                <fullName>Mining &amp; Metals</fullName>
            </value>
            <value>
                <fullName>National Treasuries</fullName>
            </value>
            <value>
                <fullName>Oil, Gas &amp; Renewables</fullName>
            </value>
            <value>
                <fullName>Pension Funds</fullName>
            </value>
            <value>
                <fullName>Power &amp; Infrastructure</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Retailers</fullName>
            </value>
            <value>
                <fullName>Standard Bank</fullName>
            </value>
            <value>
                <fullName>Telecoms &amp; Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>