force-app/main/default/objects/Campaign/fields/Target_Client_Segment__c.field-meta.xml
<CustomField>
    <fullName>Target_Client_Segment__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            Standard Bank Client Segments</description>
    <label>Target Client Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporates</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Government &amp; Institutions</fullName>
            </value>
            <value>
                <fullName>High Net Worth Individuals</fullName>
            </value>
            <value>
                <fullName>International Development Institutions</fullName>
            </value>
            <value>
                <fullName>NBFI / Buy Side</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>