force-app/main/default/objects/Campaign/fields/Total_Attended__c.field-meta.xml
<CustomField>
    <fullName>Total_Attended__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            Campaign Management Calculated field for the total number of all contacts that have Attendance Status = Attended, Walk In</description>
    <inlineHelpText>Calculated field for the total number of all contacts that have Attendance Status = Attended, Walk In</inlineHelpText>
    <label>Total Attended</label>
    <summaryFilterItems>
        <field>CampaignMember.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Attended, Walk In</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>CampaignMember.Contact_Record_Type__c</field>
        <operation>equals</operation>
        <value>Bank Contact Record Type, Client Contact Record Type</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>