force-app/main/default/objects/Campaign/fields/Touch_Point__c.field-meta.xml
<CustomField>
    <fullName>Touch_Point__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The level of interaction expected for the campaign</description>
    <inlineHelpText>The level of interaction expected for the campaign</inlineHelpText>
    <label>Touch Point</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>