force-app/main/default/objects/Campaign/fields/True_Cost_Per_Head__c.field-meta.xml
<CustomField>
    <fullName>True_Cost_Per_Head__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The cost breakdown per head excluding Standard Bank Contacts applicable for the campaign</description>
    <formula>ActualCost / IF( Number_of_Client_Contacts_Attended__c &gt; 0,Number_of_Client_Contacts_Attended__c,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The cost breakdown per head excluding Standard Bank contacts applicable for the campaign</inlineHelpText>
    <label>True Cost Per Head</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>