force-app/main/default/objects/Campaign/fields/Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Venue_Name__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
            The location where the campaign will be taking place</description>
    <inlineHelpText>The location where the Campaign will be taking place (255 characters or less)</inlineHelpText>
    <label>Venue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>