force-app/main/default/objects/Campaign/validationRules/Campaign_Cancelled_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Cancelled_Status</fullName>
    <active>true</active>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus</description>
    <errorConditionFormula>AND( ISPICKVAL( Cancelled_Reason__c ,&quot;&quot;), ISPICKVAL( Status , &quot;Cancelled&quot;) )</errorConditionFormula>
    <errorMessage>You must select a Cancelled Reason when the Status is Cancelled</errorMessage>
</ValidationRule>