force-app/main/default/objects/Campaign/validationRules/Campaign_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Category</fullName>
    <active>true</active>
    <description>Updated Error Message to make it less cryptic - Case#9456 - 01/2013 - Kevin Van der Plas
            Case#1168 - 11/2011 - Rudolf Niehaus</description>
    <errorConditionFormula>AND( ISPICKVAL( Campaign_Category_Type__c ,&quot;&quot;) ,

            OR( ISPICKVAL(Campaign_Category__c , &quot;1 - Bespoke&quot;),
            ISPICKVAL(Campaign_Category__c, &quot;2 - Value Add&quot;),
            ISPICKVAL(Campaign_Category__c ,&quot;3 - Brought to you by CIB&quot;)
            )

            )</errorConditionFormula>
    <errorMessage>You must select a Campaign Category Type when the Campaign Category is &apos;Bespoke&apos;, &apos;Value Add&apos; or &apos;Brought to you by CIB&apos;</errorMessage>
</ValidationRule>