force-app/main/default/objects/Campaign/validationRules/Campaign_Event_Datetime.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Event_Datetime</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISPICKVAL(Campaign_Category__c, &quot;7 - PA Event&quot;)),
            NOT(ISBLANK(Event_Date_Time__c)) )</errorConditionFormula>
    <errorDisplayField>Event_Date_Time__c</errorDisplayField>
    <errorMessage>You can&apos;t fill Event Date time when Campaign Category is not PA Event</errorMessage>
</ValidationRule>