force-app/main/default/objects/Campaign/validationRules/Campaign_Event_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Event_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISPICKVAL(Campaign_Category__c, &quot;7 - PA Event&quot;)),
            NOT(ISBLANK(Event_Name__c)) )</errorConditionFormula>
    <errorDisplayField>Event_Name__c</errorDisplayField>
    <errorMessage>You can&apos;t fill Event Name when Campaign Category is not PA Event</errorMessage>
</ValidationRule>