force-app/main/default/objects/Campaign/validationRules/Campaign_Programme_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Programme_URL</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISPICKVAL(Campaign_Category__c, &quot;7 - PA Event&quot;)),
            NOT(ISBLANK(Programme_URL__c)) )</errorConditionFormula>
    <errorDisplayField>Programme_URL__c</errorDisplayField>
    <errorMessage>You can&apos;t fill Programme URL when Campaign Category is not PA Event</errorMessage>
</ValidationRule>