force-app/main/default/objects/Campaign/validationRules/Campaign_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Campaign_Type</fullName>
    <active>true</active>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus</description>
    <errorConditionFormula>AND( ISPICKVAL( Campaign_Category__c ,&quot;&quot;), ISPICKVAL( Type , &quot;Marketing Event&quot;) )</errorConditionFormula>
    <errorMessage>You must select a Campaign Category when the Campaign Type is a Marketing Event.</errorMessage>
</ValidationRule>