force-app/main/default/objects/Campaign/validationRules/Mandatory_fields_ClientInsights_Survey.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_fields_ClientInsights_Survey</fullName>
    <active>true</active>
    <description>SFP-5276 - if Type: Client Research and Campaign category: Survey the second fields are mandatory: Research Partner, Bank, Email Subject.</description>
    <errorConditionFormula>AND(
  ISPICKVAL( Type , &apos;Client Research&apos;),
  ISPICKVAL( Campaign_Category__c , &apos;Survey&apos;),
  OR(
    ISBLANK(TEXT( Research_Partner__c )),
    ISBLANK(TEXT(  Bank__c )),
    ISBLANK( Email_Subject__c )
  )
)</errorConditionFormula>
    <errorMessage>If Type: Client Research and Campaign category: Survey the following fields are mandatory: Research Partner, Bank, Email Subject.</errorMessage>
</ValidationRule>