force-app/main/default/objects/Campaign/validationRules/Restrict_access_to_Deploy_to_MC.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_access_to_Deploy_to_MC</fullName>
    <active>true</active>
    <description>SFP-5968 - Only Owner, Business or System Admin can set this field to &apos;True&apos; for Active &apos;PA Events&apos;, &apos;Operational Mailers&apos; or &apos;Surveys&apos; Campaign Categories when Status = &apos;Confirmed/Contracted&apos;.</description>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED(Deploy_to_MC__c )
  ),
  Deploy_to_MC__c,
  IF(
    OR(
      ISPICKVAL(Campaign_Category__c, &apos;Survey&apos;),
      AND(
        ISPICKVAL(Campaign_Category__c, &apos;Operational Mailer&apos;),
        NOT(ISBLANK(TEXT(Campaign_Category_Type__c)))
      ),
      AND(
        ISPICKVAL(Campaign_Category__c, &apos;7 - PA Event&apos;),
        NOT(ISBLANK(TEXT(Campaign_Category_Type__c)))
      )
    ),
    IF(AND(
        ISPICKVAL( Status , &apos;Confirmed/Contracted&apos;),
        IsActive
      ),
      NOT(
        OR(
          Owner.Id = $User.Id,
          $Profile.Name = &apos;System Administrator&apos;,
          $Profile.Name = &apos;Business Administrator&apos;
        )
      ),
      TRUE
    ),
    TRUE
  )
)</errorConditionFormula>
    <errorDisplayField>Deploy_to_MC__c</errorDisplayField>
    <errorMessage>Only Owner, Business or System Admin can set this field to &apos;True&apos; for Active &apos;PA Events&apos;, &apos;Operational Mailers&apos; or &apos;Surveys&apos; Campaign Categories with filled in Category Type, when Status = &apos;Confirmed/Contracted&apos;.</errorMessage>
</ValidationRule>