force-app/main/default/objects/Campaign/validationRules/Restrict_Proof_Email_Send_access.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Proof_Email_Send_access</fullName>
    <active>true</active>
    <description>SFP-5896 - Only System Administrator can edit the &apos;Proof Email Sent&apos; field.</description>
    <errorConditionFormula>AND(
  ISCHANGED( Proof_Email_Sent__c ),
  $Profile.Name  &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorMessage>Only System Administrator can edit the &apos;Proof Email Sent&apos; field.</errorMessage>
</ValidationRule>