force-app/main/default/objects/Campaign/validationRules/Restrict_Status_changing_if_DeployToMC.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Status_changing_if_DeployToMC</fullName>
    <active>true</active>
    <description>SFP-5968 No one can change Status if Deploy_to_MC__c = TRUE</description>
    <errorConditionFormula>AND(
  Deploy_to_MC__c,
  ISCHANGED( Status )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>No one can change Campaign Status if the &apos;Deploy to MC&apos; field is checked.
Please uncheck &apos;Deploy to MC&apos; before changing Status.</errorMessage>
</ValidationRule>